Downgraded to Java 17 for Prod Hosting